@@ -1,7 +1,3 @@
-#!/bin/sh
-# the next line restarts using tclsh \
-    exec tclsh "$0" "$@"
-
 ###########################################################
 #
 # author: Bruce B Hartweg brhartweg@bigfoot.com
